<resources>
    <string name="app_name">Lang Track App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loading" translatable="false">Laddar värde</string>
    <string name="Open" translatable="false">Open</string>
    <string name="Close">Close</string>
    <string name="empty_list_info">There\'s nothing here... \nWhen Humlab assigns you a survey, you will see it here.</string>
    <string name="server_fail_info">No contact with server</string>
    <string name="mail_subject">Concerning Lang-Track-App</string>
    <string name="mail_reserch_body">-Here you can write to the researchers for Lang-Track-App-</string>
    <string name="mail_tech_body">-Here you can write to the developers for Lang-Track-App-</string>
    <string name="reserchText1">If you are experiencing any technical issues, please contact Stephan Björck.\nstephan.bjorck@humlab.lu.se\n\nIf you have questions or comments about the content of the survey, please email Henriette Arndt.\nhenriette.arndt@humlab.lu.se</string>

    <string name="log_out">Log out</string>
    <string name="doYouWantToLogOut">Do you want to log out \n%1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="langTrackApp" translatable="false">Lang-Track-App</string>
    <string name="humanityLab">Humanities Lab</string>
    <string name="menu">Menu</string>
    <string name="loggedInAs">Logged in as</string>
    <string name="logOut">Log out</string>
    <string name="contakt">Contact</string>
    <string name="about">About</string>
    <string name="SurveyToAnswer">Survey to answer</string>
    <string name="timeLeftMinute">Time left: %1d minutes</string>
    <string name="timeLeftMinutes">Time left: %2d minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="timeLeftHourAndOneMinute">Time left: %2d %s and %1d minute</string>
    <string name="timeLeftHourAndMinute">Time left: %2d %s and %1d minutes</string>
    <string name="timeLeftHourAndMinutes">Time left: %2d %s and %2d minutes</string>
    <string name="surveyToAnswer">Survey to answer</string>
    <string name="timeLeftOneMinute">Time left: %1d minute</string>
    <string name="answered">Answered</string>
    <string name="noDate">noDate</string>
    <string name="unanswered">Unanswered</string>
    <string name="dateFormat">yyyy-MM-dd HH:mm</string>
    <string name="answeredSurvey">Answered survey</string>
    <string name="unansweredSurvey">Unanswered survey</string>
    <string name="published">Published:</string>
    <string name="expired">Expired:</string>
    <string name="numberOfQuestions">Number of questions:</string>
    <string name="numberEnding">%d</string>
    <string name="noTitle">noTitle</string>
    <string name="humanitiesLab">Humanities Lab</string>
    <string name="oneHour">%d hour</string>
    <string name="manyHours">%d hours</string>
    <string name="numberOfMinutes">%d minutes</string>
    <string name="numberOfHourAndMinutes">%d hour and %d minutes</string>
    <string name="numberOfHoursAndMinutes">%d hours and %d minutes</string>
    <string name="noDuration">0 hours and 0 minutes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pickFromList">"    Select a word from the list"</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="clickOutsideTextTo">Click outside the text box to close the keyboard</string>
    <string name="openEndedHint">Enter text</string>
    <string name="minutes">Minutes</string>
    <string name="doYouWantToCloseTheSurvey">Do you want to close the survey and return to the start page?\nThe answers will not be saved.</string>
    <string name="closeTheSurvey">Close survey</string>
    <string name="langTrackAppInfo1">The Lang Track App is an app developed by Lund University Humanities Lab for research purposes.\n\nLog in with the username and password assigned to you by Lund University Humanities Lab</string>
    <string name="info">Info</string>
    <string name="enterCredentials">Please enter your username and password</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterUserName">Enter username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="menuProjectAbout">We developed the Lang-Track-App to study when, where, and how often language learners are in contact with different foreign languages in everyday life. This crucial to improving our understanding of the challenges of language learning outside of classrooms.\n\nThe project is a collaboration between the Lund University Centre for Languages and Literature and Lund University Humanities Lab.</string>
    <string name="links">Links</string>
    <string name="lund_university">Lund University</string>
    <string name="marianneInfo">Marianne Gullberg, Professor of Psycholinguistics, Centre for Languages and Literature</string>
    <string name="jonasInfo">Jonas Granfeldt, Professor of French Linguistics, Centre for Languages and Literature</string>
    <string name="team">Team</string>
    <string name="henrietteInfo">Henriette Arndt, Postdoctoral Research Fellow, LU Humanities Lab</string>
    <string name="josefInfo">Josef Granqvist, Systems Developer, LU Humanities Lab</string>
    <string name="stephanInfo">Stephan Björck, Systems Developer, LU Humanities Lab</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsText">We will ask you to complete brief surveys in this app a few times per day. You will receive a push notification whenever there is a new survey. Make sure you keep your phone nearby and the notification sounds turned on!  \n\nIt’s important that you answer each survey as soon as possible. If you don’t answer a survey, it will automatically expire after 60 minutes.</string>
    <string name="dataProcessingInfo">In addition to your survey responses, the app will automatically record the date and time when you opened each survey and when you submitted your answers. The app will not record any other data, e.g. about your location.  \n\nYour data will be compiled and analyzed by the project team. No one else will have access to your answers. When we report the results of the project, all information will be anonymized.</string>
    <string name="dataProcessingHeader">Data processing</string>
    <string name="founding">Funded by</string>
    <string name="founder_image_name">founding_en</string>
    <string name="founding_link_address">https://maw.wallenberg.org/en</string>
    <string name="click_here">click here</string>
    <string name="youHaveAnswered">"You have answered "</string>
    <string name="ofYour">" of your "</string>
    <string name="surveys">" assigned surveys."</string>
    <string name="minute">minute</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="timeLeft">Time left:</string>
    <string name="and">and</string>
    <string name="survey_expired">Survey expired</string>
    <string name="youHaveAnsweredWithFormate">You have answered %s of your %s assigned surveys.</string>
</resources>
